<?xml version="1.0"?>
<package format="3">
  <name>ros2_pure_pursuit_controller</name>
  <version>0.0.1</version>
  <description>Pure Pursuit geometric controller for bcr_bot in ROS 2 (C++).</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>a_star_planner</depend>
  <depend>a_star_interfaces</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>bcr_bot</depend>
  <depend>ros2_amcl_lite</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
